--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "deploy": "node ./gh-pages.js"
+    "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.17",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.30",
     "@sveltejs/kit": "next",
-    "gh-pages": "^3.2.3",
     "svelte": "^3.34.0"
   },
   "type": "module"
